use image from a folder

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             justify-content: center;
         }
     </style>
+    <meta charset="utf-8">
 </head>
 
 <body>
     <h1>Welcome to Coder's Workshop</h1>
     <br />
-    <div></div><img src="panda.jpg" alt="panda"></div>
+    <div></div><img src="images/panda.jpg" alt="panda"></div>
     <br />
     <p> Thanks for joining us! 💞</p>
 </body>
